--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -9,6 +9,6 @@ This is a course on systems of ordinary differential equations. It is meant to b
 
 \maketitle
 
-\activity{whatIsASystem}
+\activity{whatIsASystem/whatIsASystem}
 
 \end{document}
