still trying to bake

--- a/whatIsASystem/whatIsAsystem.tex
+++ b/whatIsASystem/whatIsAsystem.tex
@@ -1,6 +1,6 @@
 \documentclass{ximera}
 
-\title{What is a System of Ordinary Differential Equations}
+\title{What is a System}
 
 \begin{document}
 
