trying to xake serve again

--- a/preamble.tex
+++ b/preamble.tex
@@ -173,6 +173,12 @@
   \pgfmathparse{1/(#2*sqrt(2*pi))*exp(-((x-#1)^2)/(2*#2^2))}%
 }
 
+%%%% Added by Felipe
+%\usepackage{pgfplots}
+%\usepgfplotslibrary{external}
+%\tikzexternalize
+
+
 
 %%%%%%%%%%%%%
 %% Vectors
