again trying to bake

--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -11,6 +11,6 @@ This is a course on systems of ordinary differential equations. It is meant to b
 
 \maketitle
 
-\activity{whatIsASystem/whatIsASystem.tex}
+\activity{whatIsASystem/whatIsASystem}
 
 \end{document}
