--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -11,6 +11,7 @@ This is a course on systems of ordinary differential equations. It is meant to b
 
 \maketitle
 
+\activity{sampleActivity}
 \activity{whatIsASystem/whatIsASystem}
 
 \end{document}
