--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -12,6 +12,6 @@ This is a course on systems of ordinary differential equations. It is meant to b
 \maketitle
 
 \activity{sampleActivity}
-\activity{/whatIsASystem/whatIsASystem}
+\activity{whatIsASystem}
 
 \end{document}
