fixed whatIsASystem Activity 1

--- a/whatIsASystem.tex
+++ b/whatIsASystem.tex
@@ -68,10 +68,10 @@ Let's consider now consider two populations $x$ and $y$ that are in competition 
 \end{itemize}
 
 \begin{question}
-$x'= \answer{ax-bxy}$
+$x'= \answer{ax-cxy}$
 \end{question}
 \begin{question}
-$y'= \answer{cy-dxy}$
+$y'= \answer{by-dxy}$
 \end{question}
 \end{problem}
 
