removed explanation environment for problem 1 in whatIsASystem

--- a/whatIsASystem.tex
+++ b/whatIsASystem.tex
@@ -114,15 +114,15 @@ $x'= \answer{y}$
 $y'= \answer{-(k/m)x-(c/m)y}$
 \end{question}
 
-\begin{explanation} The interpretation of derivative of displacement as velocity gives directly:
-\[
-x'=y.
-\]
-Plugging this into the equation of the harmonic oscillator yields:
-\[
-y'=x''=-\frac{k}{m}x-\frac{c}{m}x'=-\frac{k}{m}x-\frac{c}{m}y.
-\]
-\end{explanation}
+%\begin{explanation} The interpretation of derivative of displacement as velocity gives directly:
+%\[
+%x'=y.
+%\]
+%Plugging this into the equation of the harmonic oscillator yields:
+%\[
+%y'=x''=-\frac{k}{m}x-\frac{c}{m}x'=-\frac{k}{m}x-\frac{c}{m}y.
+%\]
+%\end{explanation}
 \end{problem}
 
 We now proceed to the numerical and graphical interpretation of a system of ODEs. Let's go back to the predator-prey model, this time assuming concrete values for the parameters $a$, $b$, $c$ and $d$:
