--- a/whatIsASystem.tex
+++ b/whatIsASystem.tex
@@ -68,25 +68,25 @@ Let's consider now consider two populations $x$ and $y$ that are in competition 
 \end{itemize}
 
 \begin{question}
-$x'= \answer{ax-cxy}$
+$x'= \answer{ax-bxy}$
 \end{question}
 \begin{question}
-$y'= \answer{by-dxy}$
+$y'= \answer{cy-dxy}$
 \end{question}
 \end{problem}
 
-\begin{explanation} 
-In the absence of competition, the dynamics for each population is given by an exponential growth model:
-\begin{align*}
-x'&=ax\\
-y'&=cy.
-\end{align*}
-Competition has a negative effect on the growth of each population, so we need to subtract a term proportional to $xy$ to each equation, obtaining:
-\begin{align*}
-x'&=ax-bxy\\
-y'&=cy-dxy.
-\end{align*}
-\end{explanation}
+%\begin{explanation} 
+%In the absence of competition, the dynamics for each population is given by an exponential growth model:
+%\begin{align*}
+%x'&=ax\\
+%y'&=cy.
+%\end{align*}
+%Competition has a negative effect on the growth of each population, so we need to subtract a term proportional to $xy$ to each equation, obtaining:
+%\begin{align*}
+%x'&=ax-bxy\\
+%y'&=cy-dxy.
+%\end{align*}
+%\end{explanation}
 
 \begin{problem}
 A more realistic assumption in the predator-prey model is that the prey population grows logistically in the absence of predators. Write the system of ODEs for this situation, using $a$ for the intrinsic growth rate and $K$ for the carrying capacity of the rabbit population:
