cleaned up all files

--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -11,7 +11,6 @@ This is a course on systems of ordinary differential equations. It is meant to b
 
 \maketitle
 
-\activity{sampleActivity}
-\activity{whatIsASystem}
+\activity{whatIsASystem/whatIsASystem}
 
 \end{document}
