--- a/whatIsASystem/whatIsAsystem.tex
+++ b/whatIsASystem/whatIsAsystem.tex
@@ -2,7 +2,7 @@
 \documentclass{ximera}
 
 
-\input{../preamble.tex}
+\input{preamble.tex}
 
 
 \title{What is a System}
@@ -63,31 +63,30 @@ Putting all together, we get the pair of equations~\ref{rabbit-eq},~\ref{fox-eq}
 
 Let's consider now consider two populations $x$ and $y$ that are in competition with each other. We make the following assumptions:
 \begin{itemize}
-\item In isolation, each of the populations grows exponentially. We denote the growth rates for $x$ and $y$ by $a>0$ and $b>0$, respectively. 
-\item The effect of competition to each population is proportional to the product of the populations sizes, $xy$. We denote the corresponding proportionality constants for populations $x$ and $y$ by $c>0$ and $d>0$, respectively.
+\item In isolation, each of the populations grows exponentially. We denote the growth rates for $x$ and $y$ by $a>0$ and $c>0$, respectively. 
+\item The effect of competition to each population is proportional to the product of the populations sizes, $xy$. We denote the corresponding proportionality constants for populations $x$ and $y$ by $b>0$ and $d>0$, respectively.
 \end{itemize}
 
 \begin{question}
-$x'= \answer{ax-cxy}$
+$x'= \answer{ax-bxy}$
 \end{question}
 \begin{question}
-
-$y'= \answer{bx-dxy}$
+$y'= \answer{cy-dxy}$
 \end{question}
 \end{problem}
 
-\begin{explanation} 
-In the absence of competition, the dynamics for each population is given by an exponential growth model:
-\begin{align*}
-x'&=ax\\
-y'&=cy.
-\end{align*}
-Competition has a negative effect on the growth of each population, so we need to subtract a term proportional to $xy$ to each equation, obtaining:
-\begin{align*}
-x'&=ax-bxy\\
-y'&=cy-dxy.
-\end{align*}
-\end{explanation}
+%\begin{explanation} 
+%In the absence of competition, the dynamics for each population is given by an exponential growth model:
+%\begin{align*}
+%x'&=ax\\
+%y'&=cy.
+%\end{align*}
+%Competition has a negative effect on the growth of each population, so we need to subtract a term proportional to $xy$ to each equation, obtaining:
+%\begin{align*}
+%x'&=ax-bxy\\
+%y'&=cy-dxy.
+%\end{align*}
+%\end{explanation}
 
 \begin{problem}
 A more realistic assumption in the predator-prey model is that the prey population grows logistically in the absence of predators. Write the system of ODEs for this situation, using $a$ for the intrinsic growth rate and $K$ for the carrying capacity of the rabbit population:
@@ -115,15 +114,15 @@ $x'= \answer{y}$
 $y'= \answer{-(k/m)x-(c/m)y}$
 \end{question}
 
-\begin{explanation} The interpretation of derivative of displacement as velocity gives directly:
-\[
-x'=y.
-\]
-Plugging this into the equation of the harmonic oscillator yields:
-\[
-y'=x''=-\frac{k}{m}x-\frac{c}{m}x'=-\frac{k}{m}x-\frac{c}{m}y.
-\]
-\end{explanation}
+%\begin{explanation} The interpretation of derivative of displacement as velocity gives directly:
+%\[
+%x'=y.
+%\]
+%Plugging this into the equation of the harmonic oscillator yields:
+%\[
+%y'=x''=-\frac{k}{m}x-\frac{c}{m}x'=-\frac{k}{m}x-\frac{c}{m}y.
+%\]
+%\end{explanation}
 \end{problem}
 
 We now proceed to the numerical and graphical interpretation of a system of ODEs. Let's go back to the predator-prey model, this time assuming concrete values for the parameters $a$, $b$, $c$ and $d$:
