--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -12,7 +12,7 @@ This is a course on systems of ordinary differential equations. It is meant to b
 
 \maketitle
 
-\activity{whatIsASystem/whatIsASystem.tex}
+\activity{whatIsASystem/whatIsASystem}
 
 \end{document}
 
