--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -13,6 +13,7 @@ This is a course on systems of ordinary differential equations. It is meant to b
 \maketitle
 
 \activity{anotherActivity/anotherActivity}
+\activity{whatIsASystem/whatIsASystem}
 
 \end{document}
 
