--- a/whatIsASystem/whatIsASystem.tex
+++ b/whatIsASystem/whatIsASystem.tex
@@ -6,5 +6,11 @@ Another Ximera activity
 \end{abstract}
 \maketitle
 
-Trying to create a new activity.
+To introduce the concept of a system of ODEs, let's consider the \emph{Lotka-Volterra predator-prey model}, which describes two animal species in the wild, traditionally referred to as ``rabbits'' (the prey) and ``foxes'' (the predator). Denoting by $R(t)$ and $F(t)$ the rabbit and fox populations, respectively, we use the following differential equations to model the dynamics of the two species in the wild:
+\begin{align}
+\label{rabbit-eq}R'&=aR-bRF\\
+\label{fox-eq}F'&=cF+dRF
+\end{align}
+How do ecologists come up with this model? This is not a simple question, since there usually are many possible ways of modeling a real-world system. As a rule of thumb, scientists try to use the simplest possible model as a first approximation. For the predator prey model, the following are reasonable hypothesis:
+
 \end{document}
