--- a/whatIsASystem/whatIsASystem.tex
+++ b/whatIsASystem/whatIsASystem.tex
@@ -39,4 +39,20 @@ F'=-cF+dRF\text{ where $b,d>0$.}
 %\end{itemize}
 Putting all together, we get the pair of equations~\ref{rabbit-eq},~\ref{fox-eq}.
 
+\begin{problem}
+
+Let's consider now consider two populations $x$ and $y$ that are in competition with each other. We make the following assumptions:
+\begin{itemize}
+\item In isolation, each of the populations grows exponentially. We denote the growth rates for $x$ and $y$ by $a>0$ and $c>0$, respectively. 
+\item The effect of competition to each population is proportional to the product of the populations sizes, $xy$. We denote the corresponding proportionality constants for populations $x$ and $y$ by $b>0$ and $d>0$, respectively.
+\end{itemize}
+
+\begin{question}
+$x'= \answer{ax-bxy}$
+\end{question}
+\begin{question}
+$y'= \answer{cy-dxy}$
+\end{question}
+\end{problem}
+
 \end{document}
