removed outcomes from whatIsASystem.tex

--- a/whatIsASystem/whatIsASystem.tex
+++ b/whatIsASystem/whatIsASystem.tex
@@ -1,6 +1,11 @@
 \documentclass{ximera}
+
+\input{../preamble.tex}
+
 \title{What Is A System}
+
 \begin{document}
+
 \begin{abstract}
 Introduces the notion of system of ODEs.
 \end{abstract}
