trying again to add outcomes to whatIsASystem.tex

--- a/whatIsASystem/whatIsASystem.tex
+++ b/whatIsASystem/whatIsASystem.tex
@@ -10,6 +10,18 @@
 Introduces the notion of system of ODEs.
 \end{abstract}
 
+\begin{sectionOutcomes}
+After completing this section, students should be able to do the following:
+
+\begin{itemize}
+\item Recognize a system of ODEs.
+\item Interpret a system of ODEs as a vector field.
+\item Understand the representation of a vector field in the phase plane.
+\end{itemize}
+
+\end{sectionOutcomes}
+
+
 \maketitle
 
 To introduce the concept of a system of ODEs, let's consider the \emph{Lotka-Volterra predator-prey model}, which describes two animal species in the wild, traditionally referred to as ``rabbits'' (the prey) and ``foxes'' (the predator). Denoting by $R(t)$ and $F(t)$ the rabbit and fox populations, respectively, we use the following differential equations to model the dynamics of the two species in the wild:
