--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -13,6 +13,6 @@ This is a course on systems of ordinary differential equations. It is meant to b
 \maketitle
 
 \activity{whatIsASystem/whatIsASystem}
-
+\activity{springActivity/springActivity}
 \end{document}
 
