--- a/systemsOfOrdinaryDifferentialEquations.tex
+++ b/systemsOfOrdinaryDifferentialEquations.tex
@@ -7,7 +7,7 @@
 \begin{document}
 
 \begin{abstract}
-This is a course on systems of ordinary differential equations. It is meant to be an experiment of setting up a course in Ximera.
+This is a sample course on systems of ordinary differential equations. It is meant to be an experiment of setting up a course in Ximera.
 \end{abstract} 
 
 \maketitle
